helm-apps/jellystat/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellystat
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellystat.cedevapp.com`)
      kind: Rule
      services:
        - name: jellystat
          port: 3000
